yaml-examples/sickchill/sickchill-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sickchill
  namespace: default
  labels:
    app: sickchill
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sickchill
  template:
    metadata:
      labels:
        app: sickchill
    spec:
      containers:
      - name: sickchill
        image: linuxserver/sickchill
        imagePullPolicy: Always
        ports:
          - containerPort: 8081
        volumeMounts:
          - mountPath: /config
            name: config
          - mountPath: /downloads
            name: downloads
          - mountPath: /tv
            name: tv
      volumes:
      -  name: config
         persistentVolumeClaim:
          claimName: sickchill
      - name: downloads
        hostPath:
          path: /mnt/share/Downloads
      - name: tv
        hostPath:
          path: /mnt/share/Television
