yaml-examples/sickchill/sickchill-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sickchill
  namespace: default
spec:
  selector:
    app: sickchill
  ports:
  - port: 8081
    targetPort: 8081
