yaml-examples/sickchill/sickchill-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sickchill
  namespace: default
spec:
  rules:
  - host: sickchill.lan
    http:
      paths:
      - backend:
          service:
            name: sickchill
            port:
              number: 8081
        path: /
        pathType: ImplementationSpecific
